Strip keyframes not respected for scenes rendered by other scenes #41883

Closed
opened 2014-09-20 15:47:30 +02:00 by Mircea Kitsune · 17 comments

System Information
Linux openSUSE 13.1 x64, KDE 4.14.1. Radeon HD 6870, FOSS video driver (Gallium / Mesa).

Blender Version
Broken: 2.71

Short description of error
Key frames on some properties of image / video / audio strips are not respected when the scene is rendered by another scene through a scene strip. I noticed this with the "volume" and "pitch" options of a wav sound strip in a scene, as it was rendered from another scene meant to export multiple scenes in order.

Exact steps for others to reproduce the error
1 - Make sure you have two scenes. Let's say Scene.1 and Scene.2, both starting at frame 1 and ending at frame 250.

2 - Open up a Video Sequence Editor window. In Scene.1, go to Add -> Sound and add a sound strip using any audio file on your drive.

3 - Now key the volume of the sound strip you just added, within the properties sidebar (N key). For example, to make a simple fade in / out effect: Frame 1 = Volume 0.0, Frame 50 = Volume 1.0, Frame 200 = Volume 1.0, Frame 250 = Volume 0.0.

4 - While still in the Video Sequence Editor window, switch over to Scene.2. In this scene, go to Add -> Scene and select Scene.1.

5 - In the Render panel, click the Audio button (previously called Mixdown Audio) and export the scene's audio to a wav file. Do this for both scenes to compare.

Issue - If you export the audio of Scene.1 (where the sound strip is located), the volume will change according to how it was key framed. But if you render the audio of Scene.2 (which renders Scene.1), the volume of the sound strip in Scene.1 will not change according to how it was keyed, and appears to use the value detected at the first frame.

**System Information** Linux openSUSE 13.1 x64, KDE 4.14.1. Radeon HD 6870, FOSS video driver (Gallium / Mesa). **Blender Version** Broken: 2.71 **Short description of error** Key frames on some properties of image / video / audio strips are not respected when the scene is rendered by another scene through a scene strip. I noticed this with the "volume" and "pitch" options of a wav sound strip in a scene, as it was rendered from another scene meant to export multiple scenes in order. **Exact steps for others to reproduce the error** 1 - Make sure you have two scenes. Let's say Scene.1 and Scene.2, both starting at frame 1 and ending at frame 250. 2 - Open up a Video Sequence Editor window. In Scene.1, go to Add -> Sound and add a sound strip using any audio file on your drive. 3 - Now key the volume of the sound strip you just added, within the properties sidebar (N key). For example, to make a simple fade in / out effect: Frame 1 = Volume 0.0, Frame 50 = Volume 1.0, Frame 200 = Volume 1.0, Frame 250 = Volume 0.0. 4 - While still in the Video Sequence Editor window, switch over to Scene.2. In this scene, go to Add -> Scene and select Scene.1. 5 - In the Render panel, click the Audio button (previously called Mixdown Audio) and export the scene's audio to a wav file. Do this for both scenes to compare. Issue - If you export the audio of Scene.1 (where the sound strip is located), the volume will change according to how it was key framed. But if you render the audio of Scene.2 (which renders Scene.1), the volume of the sound strip in Scene.1 will not change according to how it was keyed, and appears to use the value detected at the first frame.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MirceaKitsune

Added subscriber: @MirceaKitsune
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

The way that the sequencer interacts with the animation system and the dependency graph is shaky at best. What's probably going on here is that the updated animation isn't getting flushed to the sound system for whatever reason (since we can rule out the animation not getting evaluated due to some other crippling bugs around here).

The way that the sequencer interacts with the animation system and the dependency graph is shaky at best. What's probably going on here is that the updated animation isn't getting flushed to the sound system for whatever reason (since we can rule out the animation not getting evaluated due to some other crippling bugs around here).
Antonis Ryakiotakis was assigned by Sergey Sharybin 2014-09-22 13:40:16 +02:00

Added subscribers: @Psy-Fi, @Sergey

Added subscribers: @Psy-Fi, @Sergey

Another one for you, @Psy-Fi i'm afraid.

Another one for you, @Psy-Fi i'm afraid.

This issue was referenced by 226eb53bc7

This issue was referenced by 226eb53bc7f6d0aa1769b6c889d3b15d1f4944b5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 226eb53bc7.

Closed by commit 226eb53bc7.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Argh, wrong commit number, reopening

Argh, wrong commit number, reopening
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Antonis Ryakiotakis removed their assignment 2016-01-06 20:38:18 +01:00

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sergey Sharybin self-assigned this 2016-07-29 12:42:17 +02:00

Oops, replied to a wrong report...

Oops, replied to a wrong report...

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

This issue was referenced by b40d1c1903

This issue was referenced by b40d1c1903207f1c5ba1b7cb3050b4a836c2171d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41883
No description provided.